{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 8,
  "lineage": "d9515b1b-1c8e-58da-7de3-ad7848777858",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "BANANE-INSTANCE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0d41ba74cd4d9fe8b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d41ba74cd4d9fe8b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e52853285804d42e",
            "private_dns": "ip-10-0-0-202.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.202",
            "public_ip": "15.188.143.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b34b9ff8ee529db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-06831e68be94d7354"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094616325b4d85cf7",
            "tags": {
              "Name": "BANANE-INSTANCE"
            },
            "tags_all": {
              "Name": "BANANE-INSTANCE"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06831e68be94d7354"
            ]
          },
          "dependencies": [
            "aws_security_group.BANANE-SG",
            "aws_subnet.BANANE-SUBNET1",
            "aws_vpc.BANANE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "BANANE-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0e5297061c2350eee",
            "id": "igw-0e5297061c2350eee",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "BANANE-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5297061c2350eee",
            "id": "r-rtb-0b3db7f31591c7a381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3db7f31591c7a38",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.BANANE-IGW",
            "aws_internet_gateway_attachment.BANANE-IGW-ATTACHMENT",
            "aws_vpc.BANANE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BANANE-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-06831e68be94d7354",
            "description": "BANANE-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06831e68be94d7354",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "BANANE-SG-ALLOW-SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "BANANE-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "BANANE-SG",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BANANE-SG"
            },
            "tags_all": {
              "Name": "BANANE-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-020600987ee5d8ac4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.BANANE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "BANANE-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-094616325b4d85cf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094616325b4d85cf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "BANANE-SUBNET1"
            },
            "tags_all": {
              "Name": "BANANE-SUBNET1"
            },
            "vpc_id": "vpc-020600987ee5d8ac4"
          },
          "dependencies": [
            "aws_vpc.BANANE-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "BANANE-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-020600987ee5d8ac4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c311d093890bd3a1",
            "default_route_table_id": "rtb-0b3db7f31591c7a38",
            "default_security_group_id": "sg-0f95e7b2f77a449fd",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-020600987ee5d8ac4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3db7f31591c7a38",
            "owner_id": "962615889483",
            "tags": {
              "Name": "BANANE-VPC"
            },
            "tags_all": {
              "Name": "BANANE-VPC"
            }
          }
        }
      ]
    }
  ]
}